--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 *{
     box-sizing: border-box;
 }
+body {
+    position: relative;
+}
 html, body, p {
     padding: 0;
     margin: 0;
@@ -11,6 +14,7 @@ html, body, p {
 }
 h1 {
     font-size: 40px;
+    margin-top: 0;
 }
 h2 {
     color: black;
@@ -70,11 +74,33 @@ h2 {
 }
 
 .achievements {
-    list-style-image: url("../img/icon-ok.png");
+    /* list-style-image: url("../img/icon-ok.png"); */
+    list-style: none;
+    padding: 0;
+    margin: 20px 0;
+}
+.achievements li {
+    background: url('../img/icon-ok.png') no-repeat left center;
+    padding-left: 70px;
+    margin: 20px 0;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .str-points {
-    list-style-image: url("../img/icon-ok-2.png");
+    /* list-style-image: url("../img/icon-ok-2.png"); */
+    list-style: none;
+    padding: 0;
+    margin: 20px 0;
+    column-count: 2;
+}
+.str-points li {
+    background: url('../img/icon-ok-2.png') no-repeat left center;
+    padding-left: 70px;
+    margin: 30px 0;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    margin-top: 0;
 }
 .img-container {
     display: flex;
@@ -88,7 +114,6 @@ h2 {
     height: 250px;
     background-position: center center;
     background-size: cover;
-    /* background-size: 180%; */
 }
 .img-1 {
     background-image: url("../img/priroda.jpg");
@@ -158,11 +183,28 @@ input#submit {
     text-decoration: none;
     cursor: pointer;
     display: inline-block;
-    height: 75px;
-    width: 75px;
+    height: 74px;
+    width: 74px;
     background-color: #00ECBB;
     color: #6A13EB;
     font-size: 45px;
     font-weight: bold;
     text-align: center;
+    position: fixed;
+    bottom: 80px;
+    right: 30px;
+}
+.logo-container {
+    width: 980px;
+    height: 547px;
+    background-image: url('../img/main.png');
+    background-size: cover;
+
+    box-shadow: 0px -120px 50px 0px rgba(0, 0, 0, 0.8) inset;
+}
+.text-overlap {
+    position: relative;
+    padding: 0 60px;
+    top: -100px;
+    margin: 0;
 }
